external-gateway/test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami-v1
  template:
    metadata:
      labels:
        app: whereami-v1
    spec:
      containers:
        - image: asia-northeast1-docker.pkg.dev/kzs-sandbox/public/whereami:1.0.2
          name: whereami-v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-v1
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: whereami-v1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami-v2
  template:
    metadata:
      labels:
        app: whereami-v2
    spec:
      containers:
        - image: asia-northeast1-docker.pkg.dev/kzs-sandbox/public/whereami:1.0.2
          name: whereami-v2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-v2
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: whereami-v2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami-v3
  template:
    metadata:
      labels:
        app: whereami-v3
    spec:
      containers:
        - image: asia-northeast1-docker.pkg.dev/kzs-sandbox/public/whereami:1.0.2
          name: whereami-v3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-v3
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: whereami-v3
  type: ClusterIP
---
