external-gateway/x-gw-httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: external-httproute
  labels:
    gateway: external-gateway
spec:
  hostnames:
    - "x-gw.gcpx.org"
  rules:
    - forwardTo:
        - serviceName: whereami-v1
          port: 8080
    - matches:
        - headers:
            type: Exact
            values:
              env: v2
      forwardTo:
        - serviceName: whereami-v2
          port: 8080
    - matches:
       - path:
           type: Prefix
           value: /version
      forwardTo:
        - serviceName: whereami-v3
          port: 8080
# queryParam does not work with GKE Gateway API v1alpha1
#    - matches:
#        - queryParams:
#            type: Exact
#            values:
#              param: hostname
#      forwardTo:
#        - serviceName: whereami-v3
#          port: 8080
